--- a/style/utility.css
+++ b/style/utility.css
@@ -14,7 +14,7 @@
     --max-width: 375px;
     width: min(var(--max-width), 100% - var(--px-lg) * 2);
     margin-inline: auto;
-    border: solid violet;
+    /* border: solid violet; */
 }
 .desktop-only {
     display: none;
@@ -26,8 +26,14 @@
 .flex {
     display: flex;
 }
+.items-center {
+    align-items: center;
+}
 .gap-1{
     gap: 1rem;
+}
+.gap-1\.5 {
+    gap: 1.5rem;
 }
 .grid {
     display: grid;
